--- a/project/vipinstagram/disclaimer/id/index.html
+++ b/project/vipinstagram/disclaimer/id/index.html
@@ -50,8 +50,8 @@
                               <li>Pastikan beri izin bila diminta, jika tidak fitur tidak akan berfungsi.<br></li>
                               <li>Aplikasi ini tidak mengumpulkan data pengguna akhir yang sensitif, tidak mengumpulkan akun atau kata sandi Instagram, Twitter, dll. milik Anda.<br></li>
                               <li>Sebagian ISP seperti di Indonesia meblokir Reddit, Vimeo, dll. Pakai VPN berbayar, proxies, dll., atau manut jaga aman.<br></li>
-                              <li>Harap cek kecepatan internet Anda di fast.com, dll. Internet lelet, jangan harap.<br></li>
-                              <li>Fitur unduhan yang menyenangkan hanya bisa via web internal aplikasi, bukan aplikasi resmi atau browser luar. Periksa <b>Cara pemakaian</b><br></li>
+                              <li>Harap cek kecepatan internet di <a href="https://fast.com">fast.com</a>, atau instal Internet Speed Meter, dll. Internet lelet, jangan harap.<br></li>
+                              <li>Fitur unduhan yang menyenangkan hanya bisa via web internal aplikasi (aka browser mini), bukan aplikasi resmi atau browser luar. Periksa <b>Cara pemakaian</b><br></li>
                               <li>Semua unduhan hanya mungkin bila aset media tersimpan internal pada situs terdukung, atau jaringan mereka. Sejumlah situs seperti Reddit, atau Twitter, mengarahkan tautan ke luar seperti cnn.com, dll. Situs luar belum terdukung. Harap cari media yang melekat ke situs terdukung.<br></li>
                               <li>Sebagian situs seperti Reddit atau Twitter menempelkan postingan/ tweet di postingan lain. Unduhan hanya mungkin untuk postingan mandiri, bukan postingan yang ditempelkan. Tinggal kunjungi postingan asli guna mengunduh.<br></li>
                               <li>Video Youtube yang ditempel di Reddit, Twitter, dll. TIDAK didukung.<br></li>
