--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -263,18 +263,11 @@
 
                           </div>
                         </details>
-                        <details>
-                          <summary>Why I see a slight blinking when viewing the gallery large image?</summary>
-                          <div>
-                            Images are firstly loaded as small thumbnails to avoid OutOfMemory issue. Once you focus on a gallery image, a larger image version replaces the thumbnail.
-
-                          </div>
-                        </details>
 
                         <details>
                           <summary>How to remove the notification?</summary>
                           <div>
-                            <b>Settings > Private mode > Kill the service</b>. The notification needs to stand by to listen for "COPY LINKS" if using non-private mode. You can kill it if you always goes Private mode.
+                            <b>Settings > Private mode > Kill the service</b>. The notification needs to stand by to listen for <b>COPY LINKS</b> if using non-private mode. You can kill it if you always goes Private mode.
 
                           </div>
                         </details>
