--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -147,7 +147,8 @@
                           <div>
                             <ul>
                               <li>Find and hit <b>Copy link</b>, normally displayed after clicking <b>three dots</b> icon, <b>SHARE</b> icon, or alike.</li>
-                              <li>Or long press on post creation <b>TIME</b> if available.</li>
+                              <li>Or long press (not click) on <b>TIMESTAMP</b> if available.</li>
+                              <li><b>Guess works</b>, not guaranteed: long press (not click) on any <b>TITLES</b>, or video <b>THUMBNAILS</b>, normally at listing pages. If supported you will be prompted. If not, then not supported.</li>
                             </ul>
                           </div>
                         </details>
@@ -158,7 +159,8 @@
                               <li>If the images in this tutorial section are not visible, be sure to connect internet.</li>
                               <li>Be warned! Do not use the app web interface to register accounts. It is just a WebView, not real browser, too many limitations may break registration process, like upload, paste etc. Use real browsers or official apps for registrations. Almost similar to LITE versions of any official apps -- Twitter lite, Facebook lite, etc. Only less elaborated  / sophisticated. Use it once you have an account to login and download, not to register a new one.</li>
                               <li>If <b>Copy link</b> is not provided by the supported apps (such as official reddit app), please find <b>VIP Downloader</b> icon via regular <b>Share</b> intents as the last resorts. Be informed, only supported apps will be processed, though.</li>
-                              <li>If <b>Copy link</b> <em>outside the internal web app</em> is not working, please use the provided internal web app interface regardless its limitations, and follow the above-outlined directions strictly.</li>
+                              <li>If <b>Copy link</b> <em>outside the internal web app</em> is not working, please use the provided internal web app interface regardless its limitations, and follow the above-outlined directions strictly. Only supported sites will work.</li>
+                              <!-- <li>Basically two ways to download: <br>1. <b>Proactive</b>: you do long press on anything as outlined above. 2. <b>Passive</b>: you will be prompted an icon if a video is detected, normally after you play a video. Unfortunately this is not always working due to guess works, and live-streaming is not supported. Please bear with it.</li> -->
                             </ul>
                           </div>
                         </details>
