--- a/project/vipinstagram/disclaimer/id/index.html
+++ b/project/vipinstagram/disclaimer/id/index.html
@@ -45,6 +45,7 @@
                         <details open>
                           <summary>Mohon dipahami sebelum kirim tinjauan:</summary>
                           <div>
+                            Pastikan baca FAQs untuk lebih rinci. Berikut ringkasan saja:
                             <ul>
                               <li>Aplikasi ini buatan asli anak Indonesia. Terlepas segala kekurangannya, mohon dibantu, ya. Terimakasih atas dukungannya!<br></li>
                               <li>Pastikan beri izin bila diminta, jika tidak fitur tidak akan berfungsi.<br></li>
