--- a/project/vipinstagram/disclaimer/index.html
+++ b/project/vipinstagram/disclaimer/index.html
@@ -45,6 +45,7 @@
                         <details open>
                           <summary>Please be informed before reviews:</summary>
                           <div>
+                            Be sure to read FAQs for more detailed informations. Below are few quick potential misses:
                             <ul>
                               <li>The app doesn't collect sensitive end-user data, nor your Instagram, Twitter, etc. credentials.<br></li>
                               <li>Be sure to allow the required permissions when prompted, else features are crippled, useless.<br></li>
