--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -369,7 +369,7 @@
                             <ul>
                               <li>Basically quick or long tap or pinch zoom anything to access regular or zoom displays. If something broken, try restarting the app, and see if any better.</li>
                               <li>Please use <b>Archives</b> and <b>Favorites</b> features to prioritize and organize better.</li>
-                              <li>Hit <b>Settings > Check updates</b> to view updated documentations like FAQs, etc. with or without app updates.</li>
+                              <li>Hit <b>Settings > Check updates</b> to view updated documentations like FAQs, additional video supports, etc. with or without app updates.</li>
                             </ul>
                           </div>
                         </details>
