--- a/project/vipinstagram/disclaimer/id/index.html
+++ b/project/vipinstagram/disclaimer/id/index.html
@@ -45,7 +45,7 @@
                         <details open>
                           <summary>Mohon dipahami sebelum kirim tinjauan:</summary>
                           <div>
-                            Pastikan baca FAQs untuk lebih rinci. Berikut ringkasan saja:
+                            Pastikan baca <b>Cara Permakaian</b> dan <b>FAQs</b> untuk lebih rinci. Berikut ringkasan saja:
                             <ul>
                               <li>Aplikasi ini buatan asli anak Indonesia. Terlepas segala kekurangannya, mohon dibantu, ya. Terimakasih atas dukungannya!<br></li>
                               <li>Pastikan beri izin bila diminta, jika tidak fitur tidak akan berfungsi.<br></li>
@@ -60,6 +60,7 @@
                               <li>Bila aplikasi macet, atau crash, harap coba ulang. Mungkin tidak terjadi terusa-terusan.<br></li>
                               <li>Jangan skrap! Akun dan IP Anda bisa kena b.a.n. Bila kena, tidak akan bisa akses situs. Bikin bakup, banyak, VPN berbayar, proxy, dll. VPN gratisan bisa menurunkan kecepatan dari 1MB jadi 100KB. Bila tidak paham, jangan skrap!<br></li>
                               <li>Khusus perihal berbagi ke sosmed: Sebagian aplikasi bisa menerima foto lebih dari satu seperti Facebook, Whatsapp, Twitter, dll., sebagian lagi hanya bisa terima satu foto atau video seperti Instagram, Reddit, dll. Harap mafhum, dan jangan kirim tinjauan negatif untuk sesuatu yang tidak didukung oleh aplikasi resmi menurut standard Android. Ini di luar kuasa kita tanpa memakai API mereka.</li>
+                              <li>Agar bisa menyimpan unduhan di folder publik/ bersama/ eksternal dan Anda bisa melihat hasil unduhan, pastikan akses penyimpanan diizinkan. Jika ditolak, unduhan disimpan di memori internal yang bisa berakibat kehabisan ruang penyimpanan, dan hanya bisa dilihat bila perangkat Anda telah di-root. Alternatif lain, pilih folder sendiri via opsi Atur Folder.</li>
                               <li>Bintang satu berarti kebencian di Android. Saya bikin aplikasi ini dalam tempo 3000 jam. Mohon jadi bahan pertimbangan terlepas segala kekurangannya.</li>
                             </ul>
                           </div>
