--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -43,21 +43,21 @@
                         <details>
                           <summary>Instagram</summary>
                           <div>
-                            <b>A. Internal web app interface:</b>
-                            Everything is done in one step.
+                            <b>A. Via internal web app interface:</b>
+                            Everything is done in one step. Choose one, not all.
                             <ol>
                               <li>Long press on any small thumbnails (videos or images) at listing pages: <i>/tags, /explore, /profile, or search pages</i>, etc.</li>
                               <li>Or tap the <b>BOOKMARK</b> icon.</li>
                               <li>Or tap the <b>LIKE</b> icon.</li>
                               <li>Or long press the post creation <b>TIME</b>.</li>
                             </ol>
-                            <b>B. External browsers, or Instagram app:</b>
+                            <b>B. Via external browsers, or Instagram app:</b>
                             May take two or three steps. Tap the three vertical dots at the top right corner.
                             <ol>
                               <li>Hit <b>Copy link</b>.</li>
                               <li>Or hit <b>Share link</b>, and find <b>VIP Downloader</b> icon.</li>
                             </ol>
-                            <p>Be informed! The option B and scraping may require you providing dummy credentials via <b>Settings > Accounts</b> due to restrictions. Option B may trigger annoying <b>New login</b> email warning due to being less persistent sessions. Please use the internal for convenience regardless its limitations -- due to being web app, not native app. The same principle applies to other supported sites, unless otherwise stated.</p>
+                            <p>Be informed! Option B and scraping may require you providing dummy credentials via <b>Settings > Accounts</b> due to restrictions. Option B may trigger annoying <b>New login</b> email warnings due to being less persistent sessions. Please use the internal (option A) for convenience regardless its limitations -- due to being web app, not native app. The same principle likely applies to other supported sites, unless otherwise stated.</p>
                             <img src="https://gausarts.github.io/project/vipinstagram/howto/instagram-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/instagram-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/instagram-large.jpg 1024w" alt="How to download Instagram photos and videos easily with Android" />
 
                           </div>
@@ -77,7 +77,7 @@
                               </ul>
                           </ol>
 
-                          <p>Be informed! Some ISPs like those in Indonesia block Reddit, Vimeo, etc. Use VPN, proxies, etc., or stay safe. Only works for a stand-alone post, not the one embedded inside another post. Just visit its original post to download.</p>
+                          <p>Be informed! Some ISPs like those in Indonesia block Reddit, Vimeo, etc. Use VPN, proxies, etc., or stay safe. Only works for a stand-alone post, not the one embedded inside another post. Just visit its original post to download, if the issue still stands.</p>
                           <img src="https://gausarts.github.io/project/vipinstagram/howto/reddit-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/reddit-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/reddit-large.jpg 1024w" alt="How to download Reddit videos easily with Android" />
 
                           </div>
@@ -93,10 +93,10 @@
                               </ul>
                               <li><b>Image</b>:
                               <ul>
-                                <li>Long press on images <b>internal to</b> or hosted in Twitter. If many images, just long press on one, not all.</li>
+                                <li>Long press on images <b>internal to</b> or hosted in Twitter. If many images, just long press on one as a representative for the entire images in the post, not all.</li>
                               </ul>
                           </ol>
-                          <p>Be informed! Only works for a stand-alone tweet, not the one embedded inside another tweet, identified by a bordered box/ card. Just visit its original tweet to download. Images leading to external sites, identified by <b>https://t.co/...</b> url, not internally hosted at Twitter, are not supported.</p>
+                          <p>Be informed! Unlike plain images, or other video sites, long pressing on Twitter video image previews will not work. Only works for a stand-alone tweet, not the one embedded inside another tweet, identified by a bordered box/ card. Just visit its original tweet to download. Images leading to external sites, identified by <b>https://t.co/...</b> url, not internally hosted at Twitter, are not supported, yet.</p>
 
                           <img src="https://gausarts.github.io/project/vipinstagram/howto/twitter-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/twitter-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/twitter-large.jpg 1024w" alt="How to download Twitter photos and videos easily with Android" />
 
@@ -105,7 +105,7 @@
                         <details>
                           <summary>TikTok/ Likee/ SnackVideo</summary>
                           <div>
-                          These similar apps can follow the same procedures, except for SnackVideo which can only be downloaded via their <b>Copy link</b>.
+                          These similar apps can follow the same procedures, except for SnackVideo which can only be downloaded via its own app <b>Copy link</b>.
                           <ol>
                               <li><b>Video</b>:
                               <ul>
