--- a/project/vipinstagram/license/index.html
+++ b/project/vipinstagram/license/index.html
@@ -54,20 +54,20 @@
                                   <small>The Apache License<br>
                                     <span class="licenseowner">Copyright (C) 2013 Square, Inc.</span></small></a></p>
                               <hr>
-                              <!-- <p><a class="plain menuitem" href="#apache"><b>Picasso</b> &#10143;<br>
+                              <p><a class="plain menuitem" href="#apache"><b>Picasso</b> &#10143;<br>
                                   <small>The Apache License<br>
                                     <span class="licenseowner">Copyright (C) 2013 Square, Inc.</span></small></a></p>
                               <hr>
-                              <p><a class="plain menuitem" href="#apache"><b>Glide</b> &#10143;<br>
+                              <!-- <p><a class="plain menuitem" href="#apache"><b>Glide</b> &#10143;<br>
                                   <small>BSD, part MIT and Apache 2.0<br>
                                     <span class="licenseowner">Copyright (c) 1994 Anthony Dekker</span></small></a></p>
-                              <hr> -->
+                              <hr>
 
                               <p><a class="plain menuitem" href="#apache"><b>Coil</b> &#10143;<br>
                                   <small>Apache 2.0<br>
                                     <span class="licenseowner">Copyright 2020 Coil Contributors</span></small></a></p>
                               <hr>
-                              <!--
+
 
                               <p><a class="plain menuitem" href="#apache"><b>Retrofit</b> &#10143;<br>
         <small>The Apache License<br>
@@ -96,11 +96,15 @@
                                   <small>The Apache License<br>
                                     <span class="licenseowner">Copyright (C) 2016 The Android Open Source Project<br>Modifications (c) 2017 CommonsWare, LLC</span></small></a></p>
                               <hr>
-                              <p><a class="plain menuitem" href="#apache"><b>Fetch</b> &#10143;<br>
+                              <p><a class="plain menuitem" href="#apache"><b>PRDownloader</b> &#10143;<br>
+                                  <small>The Apache License<br>
+                                  <span class="licenseowner">Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED</span></small></a></p>
+                              <hr>
+                              <!-- <p><a class="plain menuitem" href="#apache"><b>Fetch</b> &#10143;<br>
                                   <small>The Apache License<br>
                                     <span class="licenseowner">Copyright 2017 Tonyo Francis</span></small></a></p>
                               <hr>
-                              <!-- <p><a class="plain menuitem" href="#apache"><b>Fast-Android-Networking</b> &#10143;<br>
+                              <p><a class="plain menuitem" href="#apache"><b>Fast-Android-Networking</b> &#10143;<br>
                                   <small>The Apache License<br>
                                     <span class="licenseowner">Copyright (C) 2016 Amit Shekhar</span></small></a></p>
                               <hr> -->
