--- a/project/vipinstagram/disclaimer/index.html
+++ b/project/vipinstagram/disclaimer/index.html
@@ -45,7 +45,7 @@
                         <details open>
                           <summary>Please be informed before reviews:</summary>
                           <div>
-                            Be sure to read FAQs for more detailed informations. Below are few quick potential misses:
+                            Be sure to read <b>How to use</b> and <b>FAQs</b> for more detailed informations. Below are few quick potential misses:
                             <ul>
                               <li>The app doesn't collect sensitive end-user data, nor your Instagram, Twitter, etc. credentials.<br></li>
                               <li>Be sure to allow the required permissions when prompted, else features are crippled, useless.<br></li>
@@ -59,6 +59,7 @@
                               <li>If something is broken, unless it keeps happening, try restarting the app, and see if any better.<br></li>
                               <li>Do not scrape! Your accounts and IPs subject to b.a.n. When banned, you cannot access the websites! Have backups, paid VPN, proxies, etc., many. Free VPNs may drop your speed from 1MB to 100KB. Again, do not scrape! If you do, please use it wisely and responsibly. I can think of one real-live example -- saving my limited time to foster my creativity. I am, the app developer, an artist by nature. I am studying arts which interest me much, and need offline room to save time and mobile data usages. I don't repost them myself, at least so far. They are for personal study. Hopefully you can make this app beneficial for your own highest good as well in your life journey. Only Instagram profiles can be scraped for now.<br></li>
                               <li>Specific to social media sharing: while some apps can receive multiple images like Facebook, Whatsapp, Twitter, etc., some others cannot such as Instagram (See https://developers.facebook.com/docs/instagram/sharing-to-feed), Reddit, etc. TikTok cannot even receive one without API which is only granted to few and its own partners. Please bear with it and do not send negative reviews for something that the native apps don't even support in the first place using Android standards. It is simply beyond our power.</li>
+                              <li>Storage permission is required to save downloaded files into public/ shared/ external folders so you can browse them at public folders (Pictures/ Movies), and don't run out of internal space. If rejected, stored internally which can be accessed by rooted devices only, and may result in out of memory issues. Alternatively choose your own via Organize Directories option.</li>
                               <li>One star is a mere hatred at Android. It took me literally 3000 hours to build this app. Kindly take it into consideration regardless its limitations.</li>
                             </ul>
 
