--- a/project/vipinstagram/faq/id/index.html
+++ b/project/vipinstagram/faq/id/index.html
@@ -86,6 +86,12 @@
                           </div>
                         </details>
                         <details>
+                          <summary>Mengapa foto agak buram?</summary>
+                          <div>
+                              Guna menghindari masalah memori, foto dipangkas agar pas di layar saat ditampilkan. Saat dibagi, foto asli yang besar diambil. Anda bisa lihat sendiri foto asli di berkas pilihan Anda sendiri. Jadi jangan kuatir.
+                          </div>
+                        </details>
+                        <details>
                           <summary>Cara kerja skraping?</summary>
                           <div>
                             Ini versi sederhana, tidak terlalu hebat. Perlu campur tangan berhubung halaman dibikin dan hancurkan secara dinamis. <br>
@@ -97,7 +103,7 @@
                           </div>
                         </details>
                         <details>
-                          <summary>Persyaratan Skraping?</summary>
+                          <summary>Persyaratan skraping?</summary>
                           <div>
                             <ul>
                               <li>Halaman profil berisi gambar kecil, bukan laman berisi gambar besar.<br></li>
