--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -66,7 +66,7 @@
                               <li>Or your folder of choice at a removable storage if you have one.</li>
                             </ul>
 
-                            This way the data is more managable at larger storage. You can always change locations to organize better, no problems. Be sure to enable the requested permissions. If not, useless.
+                            This way the data is more managable at larger storage. You can always change locations to organize better, no problems. Be sure to enable the requested permissions to avoid issues with saving.
 
                           </div>
                         </details>
@@ -102,8 +102,15 @@
                               <li>Long press the post creation <b>TIME</b>, or practically any link which contains post links.</li>
                               <li>Use Instagram app, and hit regular <b>Copy link</b> for both public and private accounts.</li>
                             </ol>
-                            For the first four, using the app web interface is required so that the app can see what you see without any special authorization. The app does not care about your credentials. It just borrows your authorized eyes under the hood due to Instagram restrictions.
+                            For the first four, using the app web interface is required so that the app can see what you see without any special authorization. The app does not care about your credentials. It just borrows your authorized eyes under the hood due to Instagram restrictions. Checkout How to use for details.
 
+                          </div>
+                        </details>
+
+                        <details>
+                          <summary>Why does the image have artifacts?</summary>
+                          <div>
+                              To avoid out of memory errors, images are cached and cropped to fit screen when being displayed. When being shared, the original large image is taken, instead. You can view original images at your preferred folders. Meaning no worries.
                           </div>
                         </details>
 
